--- a/Assignment 1/pages/projects.ejs
+++ b/Assignment 1/pages/projects.ejs
@@ -9,6 +9,31 @@
       <h1 class="display-4"><center>Welcome to the <%= title %> page</center></h1>
     
     </div>
+
+    <div class="projects">
+      <table border="1" bordercolor="black" width="100%">
+        <tr>
+          <td width="50%"><p>This is a 2D platformer game that I have recently begun working on. The goal of this game is for the player to use the environment to reach the end point while also avoiding obstacles such as traps. This game is currently a work in progress and the final product will have a better design and more mechanics.</p><br>
+          Here is a link to the most recent build:
+          <br><a href="https://Deadshadow9999.github.io" target="blank">Deadshadow9999.github.io</a>
+          </td>
+          <td width="50%"><center><img src="Assets/images/projectImage_1.PNG" width="600" height="400"></center></td>
+        </tr>
+        <tr>
+          <td colspan="2"><strong>Who am I?</strong><br><br>
+            <p>
+              I am currently a student at Centennial College and my goal is to learn how to design video games. My hobbies include baseball, reading books, and playing video games.
+            </p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <strong>For more information please view my resume</strong><br>
+            <a href="Assets/pdf/Resume.pdf" target="blank">View Resume</a>
+          </td>
+        </tr>
+      </table>
+    </div>
     
   </main>
   
