--- a/Assignment 1/pages/about.ejs
+++ b/Assignment 1/pages/about.ejs
@@ -1,12 +1,13 @@
 <%- include ../views/partials/header.ejs %>
 
 <%- include ../views/partials/main_nav.ejs %>
-  
 
   <!-- Main Content -->
   <main class="container">
     <div class="jumbotron">
+      <header>
       <h1 class="display-4"><center>Welcome to the <%= title %> page</center></h1>
+      </header>
     
     </div>
     
