--- a/Assignment 1/pages/home.ejs
+++ b/Assignment 1/pages/home.ejs
@@ -6,7 +6,9 @@
   <!-- Main Content -->
   <main class="container">
     <div class="jumbotron">
+      <header>
       <h1 class="display-4"><center>Welcome to the <%= title %> page</center></h1>
+      </header>
     
     </div>
 
