--- a/Assignment 1/pages/services.ejs
+++ b/Assignment 1/pages/services.ejs
@@ -1,13 +1,35 @@
 <%- include ../views/partials/header.ejs %>
 
 <%- include ../views/partials/main_nav.ejs %>
-  
 
   <!-- Main Content -->
   <main class="container">
+    <head>
+      <link href="Assets/css/styles.css" rel="stylesheet" type="text/css">
+    </head>
+
     <div class="jumbotron">
+      <header>
       <h1 class="display-4"><center>Welcome to the <%= title %> page</center></h1>
+      </header>
     
+    </div>
+
+    <div>
+      <img src="Assets/images/webDesignImage.PNG" style="float: right; padding-top: 25px;">
+      <img src="Assets/images/2DGameImage.jpg" style="float: right; padding-top: 25px;">
+
+      <h3>Services offered include:</h3><br>
+
+      <ul>
+        <li>General programming</li>
+        <li>Web development</li>
+        <li>Implementing game mechanics</li>
+        <li>Designing 2D sprites</li>
+        <li>Designing 3D object models</li>
+        <li>Creating character and object animations</li>
+        <li>Mobile application implementation</li>
+      </ul>
     </div>
     
   </main>
