--- a/Assignment 1/pages/contact.ejs
+++ b/Assignment 1/pages/contact.ejs
@@ -16,7 +16,7 @@
     </div>
 
     <div style="border-style: solid;">
-      <form action="/submitRequest" method="post" id="Contact" name="Contact" onsubmit="return checkValidity()">
+      <form action="/home" id="Contact" name="Contact" onsubmit="return checkValidity()">
         <fieldset id="userInput">
           <legend><h2>Please fill in all the required fields</h2></legend>
           <br>
