Replaced an image
A png image was not displayed so it was replaced with a jpg image

--- a/Assignment 1/pages/services.ejs
+++ b/Assignment 1/pages/services.ejs
@@ -16,7 +16,7 @@
     </div>
 
     <div>
-      <img src="Assets/images/webDesignImage.PNG" style="float: right; padding-top: 25px;">
+      <img src="Assets/images/webDevelopmentImage.jpg" style="float: right; padding-top: 25px;">
       <img src="Assets/images/2DGameImage.jpg" style="float: right; padding-top: 25px;">
 
       <h3>Services offered include:</h3><br>
